# oauth-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  dhat-heap-og.json  dhat-heap-out-of-state.json  dhat-heap.json
.cargo/: config
.github/workflows/: build.yaml  ci.yml  deployment.yml
resource/: docker-compose.test.yaml  mockserver.json
src/: lib.rs  main.rs
src/algebra/: metrics.rs  mod.rs  parameter.rs  refresh.rs  secrets.rs  storage.rs  token.rs  trigger.rs
src/domain/: mod.rs  outcome.rs  query.rs  refresh.rs  state.rs  trigger.rs
src/service/: mod.rs
src/service/configuration/: mod.rs  mod.rs-E  telemetry.rs
src/service/http/: application.rs  middleware.rs  mod.rs
src/service/http/admin/: refresh.rs
src/service/http/private/: mod.rs  refresh.rs  trigger.rs
src/service/http/public/: health.rs  mod.rs  trigger.rs
tests/: lib.rs  suite.rs
tests/http/: health.rs  mod.rs  trigger.rs
