[package]
name = "oauth-api"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
actix-cors = "0.7.0"
actix-governor = "0.5.0"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
anyhow = "1.0.79"
async-trait = "0.1.80"
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
envconfig = "0.10.0"
futures = "0.3.30"
handlebars = "5.1.1"
integrationos-domain = { version = "4.1.6", features = [
    "dummy",
    "actix-error",
] }
jsonwebtoken = "9.2.0"
moka = { version = "0.12.5", features = ["future"] }
mongodb = "2.8.0"
reqwest = { version = "0.12.3", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "oauth-api"
path = "src/main.rs"

[dev-dependencies]
fake = { version = "=2.9.2", features = ["dummy"] }
mark-flaky-tests = { version = "1.0.2", features = ["tokio"] }
once_cell = "1.19.0"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
